[gd_scene load_steps=10 format=3 uid="uid://dptsf7j53xq2w"]

[ext_resource type="Texture2D" uid="uid://crujdkowjb3vn" path="res://assets/Milk and cookies.png" id="1_7v8bv"]
[ext_resource type="Script" uid="uid://cwbwd5lm2n3j8" path="res://scenes/beer.gd" id="1_31xl2"]
[ext_resource type="AudioStream" uid="uid://d30pnauwfbyvk" path="res://assets/glass-bottle-breaking-351297.mp3" id="3_he3c0"]
[ext_resource type="Texture2D" uid="uid://bujr3v3jig6m5" path="res://assets/broken cup.png" id="4_cxwox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31xl2"]
size = Vector2(15.166666, 22.333334)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_he3c0"]
size = Vector2(24.333332, 33.333336)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3o6j"]
atlas = ExtResource("4_cxwox")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_12v78"]
atlas = ExtResource("4_cxwox")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_sargw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3o6j")
}, {
"duration": 4.01,
"texture": SubResource("AtlasTexture_12v78")
}],
"loop": true,
"name": &"broken",
"speed": 5.0
}]

[node name="beer" type="CharacterBody2D" groups=["drink-not-empty"]]
z_index = 5
scale = Vector2(3, 3)
collision_layer = 4
script = ExtResource("1_31xl2")
initial_speed = 400
target_speed = 400
lifespan = 20

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.0333333, 1.1)
texture = ExtResource("1_7v8bv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.416667, 0.5000005)
shape = SubResource("RectangleShape2D_31xl2")

[node name="Area2D" type="Area2D" parent="." groups=["drink-not-empty"]]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3.1666667, -0.33333302)
shape = SubResource("RectangleShape2D_he3c0")

[node name="glass_break" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_he3c0")
volume_db = 8.525
bus = &"SFX"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.6666667, -3)
scale = Vector2(0.8625583, 1.1782523)
sprite_frames = SubResource("SpriteFrames_sargw")
animation = &"broken"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
